// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartForm /> should cancel properly when editing 1`] = `
.emotion-15 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-13 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-0 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-1 {
  height: 24px;
}

.emotion-2 {
  height: 16px;
}

.emotion-6 {
  padding-top: 8px;
}

.emotion-3 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-5 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover {
  border: 2px solid #ffffff;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  background-color: #808080;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  background-color: #808080;
}

.emotion-8:hover {
  background-color: #b3b3b3;
}

.emotion-9 {
  width: 8px;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  background-color: #808080;
}

.emotion-10,
.emotion-10:hover,
.emotion-10:visited {
  background-color: #73b61c;
}

.emotion-10:hover {
  background-color: #96c955;
}

<div
  className="emotion-15"
>
  <div
    className="emotion-14"
  >
    <div
      className="emotion-13"
    >
      <form
        action=""
        className="emotion-12"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-0"
        >
          Facet
           Visualization
        </h2>
        <div
          className="emotion-1"
        />
        <Listbox
          label="Metadata Type"
          onChange={[Function]}
          options={
            Object {
              "Analysis": Object {
                "Zvi": Object {
                  "tinyProxy": "analysis.zvi.tinyProxy",
                },
                "zvi-face-detection": "analysis.zvi-face-detection",
              },
              "Clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "Location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "Media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "Source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "System": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
          placeholder="Select Type"
          value=""
        />
        <div
          className="emotion-2"
        />
        <div
          className="emotion-6"
        >
          <label
            className="emotion-3"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-5"
          >
            <input
              className="emotion-4"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-6"
          >
             
          </div>
        </div>
        <div
          className="emotion-11"
        >
          <button
            className="emotion-8"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-9"
          />
          <button
            aria-disabled={true}
            className="emotion-10"
            onClick={[Function]}
            type="submit"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ChartForm /> should render properly without attribute 1`] = `
.emotion-15 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-13 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-0 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-1 {
  height: 24px;
}

.emotion-2 {
  height: 16px;
}

.emotion-6 {
  padding-top: 8px;
}

.emotion-3 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-5 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover {
  border: 2px solid #ffffff;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  background-color: #808080;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  background-color: #808080;
}

.emotion-8:hover {
  background-color: #b3b3b3;
}

.emotion-9 {
  width: 8px;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  background-color: #808080;
}

.emotion-10,
.emotion-10:hover,
.emotion-10:visited {
  background-color: #73b61c;
}

.emotion-10:hover {
  background-color: #96c955;
}

<div
  className="emotion-15"
>
  <div
    className="emotion-14"
  >
    <div
      className="emotion-13"
    >
      <form
        action=""
        className="emotion-12"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-0"
        >
          Facet
           Visualization
        </h2>
        <div
          className="emotion-1"
        />
        <Listbox
          label="Metadata Type"
          onChange={[Function]}
          options={
            Object {
              "Analysis": Object {
                "Zvi": Object {
                  "tinyProxy": "analysis.zvi.tinyProxy",
                },
                "zvi-face-detection": "analysis.zvi-face-detection",
              },
              "Clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "Location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "Media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "Source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "System": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
          placeholder="Select Type"
          value=""
        />
        <div
          className="emotion-2"
        />
        <div
          className="emotion-6"
        >
          <label
            className="emotion-3"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-5"
          >
            <input
              className="emotion-4"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-6"
          >
             
          </div>
        </div>
        <div
          className="emotion-11"
        >
          <button
            className="emotion-8"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-9"
          />
          <button
            aria-disabled={true}
            className="emotion-10"
            onClick={[Function]}
            type="submit"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ChartForm /> should render properly without attribute 2`] = `
.emotion-15 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-13 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-0 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-1 {
  height: 24px;
}

.emotion-2 {
  height: 16px;
}

.emotion-6 {
  padding-top: 8px;
}

.emotion-3 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-5 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover {
  border: 2px solid #ffffff;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  background-color: #808080;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  background-color: #808080;
}

.emotion-8:hover {
  background-color: #b3b3b3;
}

.emotion-9 {
  width: 8px;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  background-color: #808080;
}

.emotion-10,
.emotion-10:hover,
.emotion-10:visited {
  background-color: #73b61c;
}

.emotion-10:hover {
  background-color: #96c955;
}

<div
  className="emotion-15"
>
  <div
    className="emotion-14"
  >
    <div
      className="emotion-13"
    >
      <form
        action=""
        className="emotion-12"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-0"
        >
          Facet
           Visualization
        </h2>
        <div
          className="emotion-1"
        />
        <Listbox
          label="Metadata Type"
          onChange={[Function]}
          options={
            Object {
              "Analysis": Object {
                "Zvi": Object {
                  "tinyProxy": "analysis.zvi.tinyProxy",
                },
                "zvi-face-detection": "analysis.zvi-face-detection",
              },
              "Clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "Location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "Media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "Source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "System": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
          placeholder="type"
          value="system.type"
        />
        <div
          className="emotion-2"
        />
        <div
          className="emotion-6"
        >
          <label
            className="emotion-3"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-5"
          >
            <input
              className="emotion-4"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-6"
          >
             
          </div>
        </div>
        <div
          className="emotion-11"
        >
          <button
            className="emotion-8"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-9"
          />
          <button
            className="emotion-10"
            onClick={[Function]}
            type="submit"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
